--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row text-center">
             <img src="img/mob-app-marketing.png">
         </div>
-        <p class="center"><a class="btn btn-custom btn-large" href="#">See It In Action</a></p>
+        <p class="center"><a class="btn btn-custom btn-large" href="http://go.localytics.com/app-marketing">See It In Action</a></p>
         <div class="row text-center">
             <p>The demo offers full access to our complete product suite and doesn't require payment information.</p>
         </div>
@@ -86,32 +86,34 @@
 
 </html>
 
-    <!-- <div class="row">
-            <div class="span2 offset6">
-                <h4 class="alignRight">App Analytics</h4>
-            </div>
-            <div class="span3">
-                <h4>App Marketing</h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="span5 alignRight offset2">
-                <ul id="none">
-                    <li>Segment and filter usage data</li>
-                    <li>Cohort-based retention and engagement</li>
-                    <li>User screen flow and funnel analysis</li>
-                    <li>Location on interactive heatmaps</li>
-                </ul>
-            </div>
-            <div class="span2 symbol">
-                <img src="img/LSymbol.png">
-            </div>
-            <div class="span5">
-                <ul id="none">
-                    <li>Advanced in-app messages and segmentation</li>
-                    <li>Real-time triggers based on usage</li>
-                    <li>Campaign management and performance reports</li>
-                    <li>Integration with CRM and email systems</li>
-                </ul>
-            </div>
-        </div> -->
+<!-- 
+<div class="row">
+    <div class="span2 offset6">
+        <h4 class="alignRight">App Analytics</h4>
+    </div>
+    <div class="span3">
+        <h4>App Marketing</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="span5 alignRight offset2">
+        <ul id="none">
+            <li>Segment and filter usage data</li>
+            <li>Cohort-based retention and engagement</li>
+            <li>User screen flow and funnel analysis</li>
+            <li>Location on interactive heatmaps</li>
+        </ul>
+    </div>
+    <div class="span2 symbol">
+        <img src="img/LSymbol.png">
+    </div>
+    <div class="span5">
+        <ul id="none">
+            <li>Advanced in-app messages and segmentation</li>
+            <li>Real-time triggers based on usage</li>
+            <li>Campaign management and performance reports</li>
+            <li>Integration with CRM and email systems</li>
+        </ul>
+    </div>
+</div> 
+-->
